# ToastTask

./: .env.template  README.md  ToastTask.code-workspace  docker-compose.test.backend.yml  docker-compose.yml  run_dev.sh  run_test.sh
backend/: .env.template  Cargo.toml  Dockerfile  Rocket.toml.template  sqlx-data.json
backend/migrations/: 20230716022840_initial-setup.down.sql  20230716022840_initial-setup.up.sql
backend/migrations/2023-07-15-000810_create_tasks/: down.sql  up.sql
backend/scripts/: init_db.sh  run_test.sh  run_tests.sh  sqlx_prepare.sh  stop_db.sh  watch_tests.sh
backend/src/: auth.rs  config.rs  database.rs  handlers.rs  lib.rs  macros.rs  main.rs  responses.rs  schema.rs  utils.rs
backend/src/api/: _temp.rs  auth.rs  crud_macros.rs  general.rs  labels.rs  lists.rs  mod.rs  sessions.rs  tasks.rs  users.rs  utils.rs
backend/src/api/auth/: discord.rs  email.rs  mod.rs
backend/src/api/utils/: crud_macros.rs  mod.rs  relation_crud_macros.rs  serde.rs  tree_crud_macros.rs  validation.rs
backend/src/config/: mod.rs  test_config.rs
backend/src/guards/: auth.rs  client_info.rs  mod.rs
backend/src/models/: action.rs  discord_user_login.rs  email_user_login.rs  label.rs  labels.rs  list.rs  mod.rs  session.rs  task.rs  user.rs
backend/src/validation/: email_user_login.rs  email_user_registeration.rs  mod.rs  user.rs  user_email_registeration.rs  user_login.rs  utils.rs
backend/tests/: _template.rs  lib.rs  test_api_general.rs
backend/tests/api/: crud_macros.rs  general.rs  labels.rs  list.rs  lists.rs  mod.rs  sessions.rs  tasks.rs  users.rs
backend/tests/api/auth/: discord.rs  email.rs  mod.rs
backend/tests/api/users/: mod.rs  sessions.rs
backend/tests/commons/: crud_macros.rs  http_client.rs  mod.rs  parent_child_macros.rs  tree_crud_macros.rs
backend/tests/commons/utils/: mod.rs  rest.rs  serde.rs
web/: Dockerfile  package-lock.json  package.json
writeup/: architecture.md
