[package]
name = "toask-task-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "toast_task"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["secrets", "json"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
rocket_oauth2 = { version = "=0.5.0-rc.2"}
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnet = { version = "2.8" }
argon2rs = "0.2"
validator = "0.16"
validator_derive = "0.16"

[dev-dependencies]
quickcheck = "0.9"
speculate = "0.1"
parking_lot = { version = "0.12", features = ["nightly"] }