[package]
name = "toask-task-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "toast_task"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["secrets", "json", "uuid"] }
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "macros", "offline", "uuid", "chrono", "json", "ipnetwork"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
rocket_oauth2 = { version = "=0.5.0-rc.2"}
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.19"
argon2rs = "0.2"
validator = { version = "0.16", features = ["derive"] }
rocket-validation = "0.1.3"
paste = "1.0"

[dev-dependencies]
quickcheck = "0.9"
assert-json-diff = "2.0.2"
once_cell = "1.18.0"